--- a/meson.build
+++ b/meson.build
@@ -1,8 +1,26 @@
-project('kms++', 'c', 'cpp',
+project('kms++', 'cpp',
     default_options : [
         'cpp_std=c++17',
     ],
 )
+
+cpp = meson.get_compiler('cpp')
+
+if cpp.get_id() == 'gcc'
+    if (host_machine.cpu_family() == 'arm' and
+        cpp.version().version_compare('>=7.1') and
+        cpp.version().version_compare('<9'))
+        cpp_arguments += [
+            '-Wno-psabi',
+        ]
+    endif
+endif
+
+if cpp.has_argument('-Wno-c99-designator')
+    cpp_arguments += [
+        '-Wno-c99-designator',
+    ]
+endif
 
 libfmt_includes = include_directories('ext/fmt/include')
 libfmt_dep = declare_dependency(include_directories : libfmt_includes,
